app.yml
apiVersion: k8s.ovn.org/v1
kind: EgressFirewall
metadata:
  name: default
spec:
  egress: 
  - type: Allow
    to:
      dnsName: quay.io
    ports: 
      - port: 443
        protocol: TCP    
  - type: Deny
    to:
      cidrSelector: 0.0.0.0/0

---

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-to-same-namespace
spec:
  podSelector: {}
  egress:
    - to:
        - podSelector: {}
  policyTypes:
    - Egress
    
---

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-to-openshift-dns
spec:
  podSelector: {}
  egress:
    - ports:
        - protocol: TCP
          port: 5353
        - protocol: UDP
          port: 5353
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-dns
        - ipBlock:
            cidr: 10.128.0.0/14
  policyTypes:
    - Egress

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-openshift-monitoring
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          network.openshift.io/policy-group: monitoring
  podSelector: {}
  policyTypes:
  - Ingress

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-openshift-ingress
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          policy-group.network.openshift.io/ingress: ""
  podSelector: {}
  policyTypes:
  - Ingress

---

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-from-same-namespace
spec:
  podSelector:
  ingress:
  - from:
    - podSelector: {}

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
spec:
  selector:
    matchLabels:
      app: webserver
  replicas: 3
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
        - name: webserver
          command:
            - python3
          args:
            - '-m'
            - http.server
            - '8080'
            - '--directory'
            - /tmp
          image: >-
                  quay.io/centos/centos:stream9
          ports:
            - containerPort: 8080
              name: http

---

apiVersion: v1
kind: Service
metadata:
  name: webserver
spec:
  selector:
    app: webserver
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
